# pymc-dist-func

./: pyproject.toml  test.py  test_decorator.py
src/pymc_dist_func/: __init__.py  distribution.py  normal.py  normal_decorator.py  shape_utils.py
